<resources>
    <string name="app_name">ChatAppAndroidClient</string>
    <string name="login_etUsername">Useraname</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLog_in">Log in</string>
    <string name="logo">logo</string>
    <string name="logisimo">logisimo</string>
    <string name="chatapp">ChatApp</string>
    <string name="register">Register</string>
    <string name="to_register">To Register</string>
    <string name="not_registered">Not registered?</string>
    <string name="to_login">To Login</string>
    <string name="already_registered">already registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nickname">Nickname</string>
    <string name="etsearcontact">etSearContact</string>
    <string name="add">Add</string>
    <string name="search_contact">Search Contact</string>
    <string name="server">Server Address</string>
    <string name="contact_username">Contact Username (Phone No.)</string>
    <string name="add_contact">Add Contact</string>
    <string name="BaseUrl">http://10.0.2.2:5243/api/</string>
    <string name="there_is_no_such_contact_mate">there is no such contact, mate</string>
    <string name="password_or_nickname_are_incorrect">password or nickname are incorrect</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="profilepicture">profilePicture</string>
    <string name="take_a_picture">take a picture</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="edit_server_address">edit server address</string>
    <string name="edit_profile_picture_from_gallery">Edit profile picture (from gallery)</string>
    <string name="edit_profile_picture_from_camera">edit profile picture (from camera)</string>
    <string name="saved_changes_successfully">Saved changes successfully</string>
    <string name="enter_server_address_here">Enter server address here</string>
    <string name="username_phone_number">Username (Phone Number)</string>
</resources>