<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/activity_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/contact_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_username"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/server_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server"
            android:inputType="textPersonName"
            android:autofillHints="" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddHim"
            android:background="@drawable/button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_contact" />
        <TextView
            android:id="@+id/error_add_contact"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/red"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/there_is_no_such_contact_mate"
            android:textAlignment="center"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logisimo"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_action_name"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/chatapp"
            android:textAlignment="center" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>