<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:background="@drawable/activity_background"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:text="" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_back_to_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/go_back"
                android:contentDescription="@string/add" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_weight="1"
        android:background="@color/cardview_dark_background"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:baselineAligned="true">
        <LinearLayout
            android:id="@+id/linerVertical1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/profilepicture" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditPic"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/button_background"
                android:text="@string/edit_profile_picture"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/button_background"
                android:text="@string/edit_profile_picture"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>